# quill-verse-studio

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  editor.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: restricted-capability.json  unrestricted-capability.json
src-tauri/src/: lib.rs  llm copy.rs  llm.rs
src/ai/: aiTool.ts  aifeatures.ts
src/components/: AIRephraserModal copy 2.tsx  AIRephraserModal.tsx  AppHeader.tsx  BookCard.tsx  BookVersionModal.tsx  CenterPanel.tsx  ChangesSidebar.tsx  ChapterContextMenu.tsx  ChapterLinkModal.tsx  CharacterArcPlotCanvas.tsx  CharacterGlossary.tsx  CollaborativeRichTextEditor.tsx  CreateBookModal.tsx  CreateCharacterModal.tsx  CreateLocationModal.tsx  CreateObjectModal.tsx  CreateVersionModal.tsx  DeletableEdge.tsx  EditBookModal.tsx  EditCenterPanel.tsx  EditCharacterModal.tsx  EditLeftSidebar.tsx  EditLocationModal.tsx  EditModeSelector.tsx  EditObjectModal.tsx  EditSidebarChapterList.tsx  EditVersionModal.tsx  EditorContentArea.tsx  EditorRichTextEditor.tsx  EditorStatusBar.tsx  EditorToolbar.tsx  Header.tsx  HomePage.tsx  IntegratedPlotCanvas.tsx  LeftSidebar.tsx  LocationGlossary.tsx  ModeNavigation.tsx  NodeEditModal.tsx  ObjectGlossary.tsx  PlanLeftSidebar.tsx  (+16 more)
src/context/: LLMContext.tsx
src/contexts/: PlotCanvasContext.tsx
src/extensions/: CommentExtension.ts  PageAccessControlExtension.ts  PageAccessControlPlugin.ts  PageAccessControlStyles.css  SceneDividerExtension.ts  TrackChangesExtension.ts
src/hooks/: useClipboard.ts  (+3 more)
(+52 files in other folders)
